{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 96,
  "lineage": "7f5d31d5-4f13-c3e2-3028-e00cf6aad409",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "core_ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/frontendIPConfigurations/core-fe",
                "load_balancer_rules": [
                  "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/loadBalancingRules/consul-8500"
                ],
                "name": "core-fe",
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/core-subnet"
              }
            ],
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb",
            "location": "westeurope",
            "name": "hashistack-core-ilb",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "hashistack-servers-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "vault_ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/frontendIPConfigurations/vault-fe",
                "load_balancer_rules": [
                  "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/loadBalancingRules/vault-8200"
                ],
                "name": "vault-fe",
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet"
              }
            ],
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb",
            "location": "westeurope",
            "name": "hashistack-vault-ilb",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "hashistack-servers-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "core_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/backendAddressPools/core-bep",
            "load_balancing_rules": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/loadBalancingRules/consul-8500"
            ],
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb",
            "name": "core-bep"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.core_ilb",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "vault_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Compute/virtualMachineScaleSets/hashistack-vault-vmss/virtualMachines/1/networkInterfaces/vault-nic/ipConfigurations/vault-ipcfg",
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Compute/virtualMachineScaleSets/hashistack-vault-vmss/virtualMachines/2/networkInterfaces/vault-nic/ipConfigurations/vault-ipcfg",
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Compute/virtualMachineScaleSets/hashistack-vault-vmss/virtualMachines/3/networkInterfaces/vault-nic/ipConfigurations/vault-ipcfg"
            ],
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/backendAddressPools/vault-bep",
            "load_balancing_rules": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/loadBalancingRules/vault-8200"
            ],
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb",
            "name": "vault-bep"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.vault_ilb",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "consul_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/probes/consul-8500",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/loadBalancingRules/consul-8500"
            ],
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb",
            "name": "consul-8500",
            "number_of_probes": 2,
            "port": 8500,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.core_ilb",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vault_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/probes/vault-8200",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/loadBalancingRules/vault-8200"
            ],
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb",
            "name": "vault-8200",
            "number_of_probes": 2,
            "port": 8200,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.vault_ilb",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "consul_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/backendAddressPools/core-bep"
            ],
            "backend_port": 8500,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/frontendIPConfigurations/core-fe",
            "frontend_ip_configuration_name": "core-fe",
            "frontend_port": 8500,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/loadBalancingRules/consul-8500",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb",
            "name": "consul-8500",
            "probe_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-core-ilb/probes/consul-8500",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.core_ilb",
            "azurerm_lb_backend_address_pool.core_pool",
            "azurerm_lb_probe.consul_probe",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "vault_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/backendAddressPools/vault-bep"
            ],
            "backend_port": 8200,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/frontendIPConfigurations/vault-fe",
            "frontend_ip_configuration_name": "vault-fe",
            "frontend_port": 8200,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/loadBalancingRules/vault-8200",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb",
            "name": "vault-8200",
            "probe_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/loadBalancers/hashistack-vault-ilb/probes/vault-8200",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.vault_ilb",
            "azurerm_lb_backend_address_pool.vault_pool",
            "azurerm_lb_probe.vault_probe",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/natGateways/hashistack-nat-gw",
            "idle_timeout_in_minutes": 4,
            "location": "westeurope",
            "name": "hashistack-nat-gw",
            "resource_group_name": "hashistack-servers-rg",
            "resource_guid": "dc6f493e-3473-4235-aa61-03cda9e8472d",
            "sku_name": "Standard",
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-nat-gw",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat_gw_pip_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/natGateways/hashistack-nat-gw|/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/publicIPAddresses/hashistack-nat-pip",
            "nat_gateway_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/natGateways/hashistack-nat-gw",
            "public_ip_address_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/publicIPAddresses/hashistack-nat-pip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat_gw",
            "azurerm_public_ip.nat_pip",
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jump_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkInterfaces/hashistack-jump-nic",
            "internal_domain_name_suffix": "2aglfidcykienj14o4zb1lf3bb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/publicIPAddresses/hashistack-jump-pip",
                "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "00-0D-3A-2F-3C-B6",
            "name": "hashistack-jump-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "hashistack-servers-rg",
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            },
            "virtual_machine_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Compute/virtualMachines/hashistack-jump-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-jump-nic",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_public_ip.jump_pip",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jump_nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkInterfaces/hashistack-jump-nic|/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-jump-nsg",
            "network_interface_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkInterfaces/hashistack-jump-nic",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-jump-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.jump_nic",
            "azurerm_network_security_group.jump_nsg",
            "azurerm_public_ip.jump_pip",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "client_nsgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dc1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-dc1-client-nsg",
            "location": "westeurope",
            "name": "hashistack-dc1-client-nsg",
            "resource_group_name": "hashistack-dc1-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowOutboundToCore",
                "priority": 300,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-dc1-client-nsg",
            "resource_group_name": "hashistack-dc1-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.clients_rgs"
          ]
        },
        {
          "index_key": "dc2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-dc2-client-nsg",
            "location": "westeurope",
            "name": "hashistack-dc2-client-nsg",
            "resource_group_name": "hashistack-dc2-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowOutboundToCore",
                "priority": 300,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-dc2-client-nsg",
            "resource_group_name": "hashistack-dc2-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.clients_rgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "core_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-core-nsg",
            "location": "westeurope",
            "name": "hashistack-core-nsg",
            "resource_group_name": "hashistack-servers-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromAdmin",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.93.142.26",
                  "212.114.159.234",
                  "88.64.185.12"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowIntraCoreSubnet",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-core-nsg",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jump_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-jump-nsg",
            "location": "westeurope",
            "name": "hashistack-jump-nsg",
            "resource_group_name": "hashistack-servers-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromAdmin",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.93.142.26",
                  "212.114.159.234",
                  "88.64.185.12"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-jump-nsg",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vault_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-vault-nsg",
            "location": "westeurope",
            "name": "hashistack-vault-nsg",
            "resource_group_name": "hashistack-servers-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromAdmin",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.93.142.26",
                  "212.114.159.234",
                  "88.64.185.12"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowIntraVaultSubnet",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-vault-nsg",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jump_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/publicIPAddresses/hashistack-jump-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.211.73.167",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "hashistack-jump-pip",
            "resource_group_name": "hashistack-servers-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/publicIPAddresses/hashistack-nat-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.95.144.52",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "hashistack-nat-pip",
            "resource_group_name": "hashistack-servers-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "client_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dc1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc1-vnet/subnets/client-dc1-subnet",
            "name": "client-dc1-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hashistack-dc1-rg",
            "virtual_network_name": "hashistack-dc1-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "client-dc1-subnet",
            "resource_group_name": "hashistack-dc1-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda",
            "virtual_network_name": "hashistack-dc1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.clients_rgs",
            "azurerm_virtual_network.client_vnets"
          ]
        },
        {
          "index_key": "dc2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc2-vnet/subnets/client-dc2-subnet",
            "name": "client-dc2-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hashistack-dc2-rg",
            "virtual_network_name": "hashistack-dc2-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "client-dc2-subnet",
            "resource_group_name": "hashistack-dc2-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda",
            "virtual_network_name": "hashistack-dc2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.clients_rgs",
            "azurerm_virtual_network.client_vnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "core_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/core-subnet",
            "name": "core-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hashistack-servers-rg",
            "virtual_network_name": "hashistack-server-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "core-subnet",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda",
            "virtual_network_name": "hashistack-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.servers_rg",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vault_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet",
            "name": "vault-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hashistack-servers-rg",
            "virtual_network_name": "hashistack-server-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vault-subnet",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda",
            "virtual_network_name": "hashistack-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.servers_rg",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "core_subnet_nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/core-subnet",
            "nat_gateway_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/natGateways/hashistack-nat-gw",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/core-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat_gw",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "vault_subnet_nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet",
            "nat_gateway_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/natGateways/hashistack-nat-gw",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat_gw",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "client_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dc1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc1-vnet/subnets/client-dc1-subnet",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-dc1-client-nsg",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc1-vnet/subnets/client-dc1-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.client_nsgs",
            "azurerm_resource_group.clients_rgs",
            "azurerm_subnet.client_subnets",
            "azurerm_virtual_network.client_vnets"
          ]
        },
        {
          "index_key": "dc2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc2-vnet/subnets/client-dc2-subnet",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-dc2-client-nsg",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc2-vnet/subnets/client-dc2-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.client_nsgs",
            "azurerm_resource_group.clients_rgs",
            "azurerm_subnet.client_subnets",
            "azurerm_virtual_network.client_vnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "core_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/core-subnet",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-core-nsg",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/core-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.core_nsg",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.core_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vault_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-vault-nsg",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.vault_nsg",
            "azurerm_resource_group.servers_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "client_vnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dc1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f10ff9b0-8ecb-43cd-a015-3ea369f82c3f",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc1-vnet",
            "location": "westeurope",
            "name": "hashistack-dc1-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "hashistack-dc1-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc1-vnet/subnets/client-dc1-subnet",
                "name": "client-dc1-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-dc1-client-nsg"
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-dc1-vnet",
            "resource_group_name": "hashistack-dc1-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.clients_rgs"
          ]
        },
        {
          "index_key": "dc2",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "764ff10d-e6d0-4366-b595-f4dbcc69456c",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc2-vnet",
            "location": "westeurope",
            "name": "hashistack-dc2-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "hashistack-dc2-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.20.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc2-vnet/subnets/client-dc2-subnet",
                "name": "client-dc2-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-dc2-client-nsg"
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-dc2-vnet",
            "resource_group_name": "hashistack-dc2-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.clients_rgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "server_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a0b20ce0-c262-4690-a77e-77b21dacbd09",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet",
            "location": "westeurope",
            "name": "hashistack-server-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "hashistack-servers-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/vault-subnet",
                "name": "vault-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-vault-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/subnets/core-subnet",
                "name": "core-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/networkSecurityGroups/hashistack-core-nsg"
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "ManagedBy": "Terraform - Majdi",
              "Project": "hashistack"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "hashistack-server-vnet",
            "resource_group_name": "hashistack-servers-rg",
            "subscription_id": "f8cea8db-c84b-44eb-aa67-f8c938abbfda"
          },
          "dependencies": [
            "azurerm_resource_group.servers_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "clients_to_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dc1",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc1-vnet/virtualNetworkPeerings/peer-dc1-to-servers",
            "name": "peer-dc1-to-servers",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet",
            "resource_group_name": "hashistack-dc1-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hashistack-dc1-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rgs",
            "azurerm_resource_group.servers_rg",
            "azurerm_virtual_network.client_vnets",
            "azurerm_virtual_network.server_vnet"
          ]
        },
        {
          "index_key": "dc2",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc2-vnet/virtualNetworkPeerings/peer-dc2-to-servers",
            "name": "peer-dc2-to-servers",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet",
            "resource_group_name": "hashistack-dc2-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hashistack-dc2-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rgs",
            "azurerm_resource_group.servers_rg",
            "azurerm_virtual_network.client_vnets",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "server_to_clients",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dc1",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/virtualNetworkPeerings/peer-servers-to-dc1",
            "name": "peer-servers-to-dc1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc1-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc1-vnet",
            "resource_group_name": "hashistack-servers-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hashistack-server-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rgs",
            "azurerm_resource_group.servers_rg",
            "azurerm_virtual_network.client_vnets",
            "azurerm_virtual_network.server_vnet"
          ]
        },
        {
          "index_key": "dc2",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-servers-rg/providers/Microsoft.Network/virtualNetworks/hashistack-server-vnet/virtualNetworkPeerings/peer-servers-to-dc2",
            "name": "peer-servers-to-dc2",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/hashistack-dc2-rg/providers/Microsoft.Network/virtualNetworks/hashistack-dc2-vnet",
            "resource_group_name": "hashistack-servers-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hashistack-server-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rgs",
            "azurerm_resource_group.servers_rg",
            "azurerm_virtual_network.client_vnets",
            "azurerm_virtual_network.server_vnet"
          ]
        }
      ]
    }
  ]
}